# aoc-rs

./: Cargo.toml  README.md
2015/day_01/: Cargo.toml
2015/day_01/src/: main.rs
2015/day_02/: Cargo.toml
2015/day_02/src/: main.rs
2015/day_03/: Cargo.toml
2015/day_03/src/: main.rs
2015/day_04/: Cargo.toml
2015/day_04/src/: main.rs
2015/day_05/: Cargo.toml
2015/day_05/src/: main.rs
2015/day_06/: Cargo.toml
2015/day_06/src/: main.rs
2015/day_07/: Cargo.toml
2015/day_07/src/: main.rs  test.txt
2015/day_08/: Cargo.toml
2015/day_08/src/: main.rs
2015/day_09/: Cargo.toml
2015/day_09/src/: main.rs
2015/day_10/: Cargo.toml
2015/day_10/src/: main.rs
2015/day_11/: Cargo.toml
2015/day_11/src/: main.rs
2015/day_12/: Cargo.toml
2015/day_12/src/: main.rs
2015/day_13/: Cargo.toml
2015/day_13/src/: main.rs
2015/day_14/: Cargo.toml
2015/day_14/src/: main.rs
2015/day_15/: Cargo.toml
2015/day_15/src/: main.rs
2015/day_16/: Cargo.toml
2015/day_16/src/: main.rs
2015/day_17/: Cargo.toml
2015/day_17/src/: main.rs
2015/day_18/: Cargo.toml
2015/day_18/src/: main.rs
2015/day_19/: Cargo.toml
2015/day_19/src/: main.rs  test2.txt  test3.txt  test4.txt
2015/day_20/: Cargo.toml
2015/day_20/src/: main.rs
2015/day_21/: Cargo.toml
2015/day_21/src/: main.rs
2015/day_22/: Cargo.toml
2015/day_22/src/: main.rs
2015/day_23/: Cargo.toml
2015/day_23/src/: main.rs
2015/day_24/: Cargo.toml
2015/day_24/src/: main.rs
2015/day_25/: Cargo.toml
2015/day_25/src/: main.rs
2015/template/: Cargo-EDIT.toml
2015/template/src/: main.rs
2016/day_01/: Cargo.toml
2016/day_01/src/: main.rs
2016/day_02/: Cargo.toml
2016/day_02/src/: main.rs
2016/day_03/: Cargo.toml
2016/day_03/src/: main.rs  test.txt
2016/day_04/: Cargo.toml
2016/day_04/src/: main.rs
2016/day_05/: Cargo.toml
2016/day_05/src/: main.rs
2016/day_06/: Cargo.toml
2016/day_06/src/: main.rs
2016/day_07/: Cargo.toml
2016/day_07/src/: main.rs
2016/day_08/: Cargo.toml
2016/day_08/src/: main.rs
2016/day_09/: Cargo.toml
2016/day_09/src/: main.rs
2016/day_10/: Cargo.toml
2016/day_10/src/: main.rs
2016/day_11/: Cargo.toml  ]
2016/day_11/src/: main.rs
2016/day_12/: Cargo.toml
2016/day_12/src/: main.rs
2016/day_13/: Cargo.toml
2016/day_13/src/: main.rs
2016/day_14/: Cargo.toml
2016/day_14/src/: main.rs
2016/day_15/: Cargo.toml
2016/day_15/src/: main.rs
2016/day_16/: Cargo.toml  rr2
2016/day_16/src/: main.rs
2016/day_17/: Cargo.toml
2016/day_17/src/: main.rs
2016/day_18/: Cargo.toml
2016/day_18/src/: main.rs
2016/day_19/: Cargo.toml
2016/day_19/src/: main.rs
2016/day_20/: Cargo.toml
2016/day_20/src/: main.rs
2016/day_21/: Cargo.toml
2016/day_21/src/: main.rs
2016/day_22/: Cargo.toml
2016/day_22/src/: main.rs
2016/day_23/: Cargo.toml
2016/day_23/src/: main.rs
2016/day_24/: Cargo.toml  temp.rs
2016/day_24/src/: main.rs
2016/day_25/: Cargo.toml
2016/day_25/src/: main.rs
2017/day_01/: Cargo.toml
2017/day_01/src/: main.rs
2017/day_02/: Cargo.toml
2017/day_02/src/: main.rs
2017/day_03/: Cargo.toml
2017/day_03/src/: main.rs
2017/day_04/: Cargo.toml  perf.data
2017/day_04/src/: main.rs
2017/day_05/: Cargo.toml
2017/day_05/src/: main.rs
2017/day_06/: Cargo.toml
2017/day_06/src/: main.rs
2017/day_07/: Cargo.toml
2017/day_07/src/: main.rs
2017/day_08/: Cargo.toml
2017/day_08/src/: main.rs
2017/day_09/: Cargo.toml
2017/day_09/src/: main.rs
2017/day_10/: Cargo.toml
2017/day_11/: Cargo.toml
2017/day_12/: Cargo.toml
2017/day_13/: Cargo.toml
2017/day_14/: Cargo.toml
2017/day_15/: Cargo.toml
2017/day_16/: Cargo.toml
2017/day_17/: Cargo.toml
2017/day_18/: Cargo.toml
2017/day_19/: Cargo.toml
2017/day_20/: Cargo.toml
2017/day_21/: Cargo.toml
2017/day_22/: Cargo.toml
2017/day_23/: Cargo.toml
2017/day_24/: Cargo.toml
2017/day_25/: Cargo.toml
2018/day_01/: Cargo.toml
2018/day_02/: Cargo.toml
2018/day_03/: Cargo.toml
2018/day_04/: Cargo.toml
2018/day_05/: Cargo.toml
2022/day_01/: Cargo.toml
2022/day_02/: Cargo.toml
2022/day_03/: Cargo.toml
2022/day_04/: Cargo.toml
2022/day_05/: Cargo.toml
2022/day_06/: Cargo.toml
2022/day_07/: Cargo.toml
2022/day_08/: Cargo.toml
2022/day_09/: Cargo.toml
2022/day_10/: Cargo.toml
2022/day_11/: Cargo.toml
2022/day_12/: Cargo.toml
2022/day_13/: Cargo.toml
2022/day_14/: Cargo.toml
2022/day_15/: Cargo.toml
2022/day_16/: Cargo.toml
2022/day_17/: Cargo.toml
2022/day_18/: Cargo.toml
2022/day_19/: Cargo.toml
2022/day_20/: Cargo.toml
2022/day_21/: Cargo.toml
2022/day_22/: Cargo.toml  rr3
2022/day_23/: Cargo.toml
2022/day_24/: Cargo.toml
2022/day_25/: Cargo.toml
2022/template/: Cargo-EDIT.toml
2023/day_01/: Cargo.toml
2023/day_02/: Cargo.toml
2023/day_03/: Cargo.toml
2023/day_04/: Cargo.toml
2023/day_05/: Cargo.toml
2023/day_06/: Cargo.toml
2023/day_07/: Cargo.toml
2023/day_08/: Cargo.toml
2023/day_09/: Cargo.toml
2023/day_10/: Cargo.toml
2023/day_11/: Cargo.toml
2023/day_12/: Cargo.toml
2023/day_13/: Cargo.toml
2023/day_14/: Cargo.toml
2023/day_15/: Cargo.toml
2023/day_16/: Cargo.toml
2023/day_17/: Cargo.toml
2023/day_18/: Cargo.toml
2023/day_19/: Cargo.toml
2023/day_20/: Cargo.toml
2023/day_21/: Cargo.toml
2023/day_22/: Cargo.toml
2023/day_23/: Cargo.toml
2023/day_24/: Cargo.toml
2024/day_01/: Cargo.toml
2024/day_02/: Cargo.toml
2024/day_03/: Cargo.toml
2024/day_04/: Cargo.toml
2024/day_05/: Cargo.toml
2024/day_06/: Cargo.toml
2025/day_01/: Cargo.toml
2025/day_02/: Cargo.toml
2025/day_03/: Cargo.toml
2025/day_04/: Cargo.toml
2025/day_05/: Cargo.toml
2025/day_06/: Cargo.toml
2025/day_07/: Cargo.toml
2025/day_08/: Cargo.toml
2025/day_09/: Cargo.toml
inputs/: Cargo.toml  README.md
inputs/src/: main.rs
src/: days.rs  main.rs
src/bench/: mod.rs
src/common/: mod.rs
src/y_2020/: mod.rs
src/year_2020/: mod.rs
src/year_2021/: mod.rs
template/: Cargo.toml
template/src/: main.rs
(+320 files in other folders)
