[package]
name = "aoc-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
took = "0.1.2"
gag = "1.0.0"

# Days
day_01 = { path = "2022/day_01" }
day_02 = { path = "2022/day_02" }
day_03 = { path = "2022/day_03" }
day_04 = { path = "2022/day_04" }
day_05 = { path = "2022/day_05" }
day_06 = { path = "2022/day_06" }
day_07 = { path = "2022/day_07" }
day_08 = { path = "2022/day_08" }
day_09 = { path = "2022/day_09" }
day_10 = { path = "2022/day_10" }
day_11 = { path = "2022/day_11" }
day_12 = { path = "2022/day_12" }
day_13 = { path = "2022/day_13" }
day_14 = { path = "2022/day_14" }
