[package]
name = "aoc-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
took = "0.1.2"
gag = "1.0.0"

# Days
day_01 = { path = "2022/day_01" }
day_02 = { path = "2022/day_02" }
day_03 = { path = "2022/day_03" }
day_04 = { path = "2022/day_04" }
day_05 = { path = "2022/day_05" }
day_06 = { path = "2022/day_06" }
day_07 = { path = "2022/day_07" }
day_08 = { path = "2022/day_08" }
day_09 = { path = "2022/day_09" }
day_10 = { path = "2022/day_10" }
day_11 = { path = "2022/day_11" }
day_12 = { path = "2022/day_12" }
day_13 = { path = "2022/day_13" }
day_14 = { path = "2022/day_14" }
day_15 = { path = "2022/day_15" }
day_16 = { path = "2022/day_16" }
day_17 = { path = "2022/day_17" }
day_18 = { path = "2022/day_18" }
day_19 = { path = "2022/day_19" }
day_20 = { path = "2022/day_20" }
day_21 = { path = "2022/day_21" }
day_22 = { path = "2022/day_22" }
day_23 = { path = "2022/day_23" }
day_24 = { path = "2022/day_24" }
day_25 = { path = "2022/day_25" }
