[package]
name = "aoc-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
took = "0.1.2"
gag = "1.0.0"

# 2023
# ===================================

day_2023_01 = { path = "2023/day_01" }
day_2023_02 = { path = "2023/day_02" }
day_2023_03 = { path = "2023/day_03" }
day_2023_04 = { path = "2023/day_04" }
day_2023_05 = { path = "2023/day_05" }
day_2023_06 = { path = "2023/day_06" }
day_2023_07 = { path = "2023/day_07" }
day_2023_08 = { path = "2023/day_08" }
day_2023_09 = { path = "2023/day_09" }
day_2023_10 = { path = "2023/day_10" }
day_2023_11 = { path = "2023/day_11" }
day_2023_12 = { path = "2023/day_12" }
day_2023_13 = { path = "2023/day_13" }
day_2023_14 = { path = "2023/day_14" }
day_2023_15 = { path = "2023/day_15" }
day_2023_16 = { path = "2023/day_16" }
day_2023_17 = { path = "2023/day_17" }
day_2023_18 = { path = "2023/day_18" }
day_2023_19 = { path = "2023/day_19" }
# day_2023_20 = { path = "2023/day_20" }
# day_2023_21 = { path = "2023/day_21" }
# day_2023_22 = { path = "2023/day_22" }
# day_2023_23 = { path = "2023/day_23" }
# day_2023_24 = { path = "2023/day_24" }
# day_2023_25 = { path = "2023/day_25" }

# 2022
# ===================================

day_2022_01 = { path = "2022/day_01" }
day_2022_02 = { path = "2022/day_02" }
day_2022_03 = { path = "2022/day_03" }
day_2022_04 = { path = "2022/day_04" }
day_2022_05 = { path = "2022/day_05" }
day_2022_06 = { path = "2022/day_06" }
day_2022_07 = { path = "2022/day_07" }
day_2022_08 = { path = "2022/day_08" }
day_2022_09 = { path = "2022/day_09" }
day_2022_10 = { path = "2022/day_10" }
day_2022_11 = { path = "2022/day_11" }
day_2022_12 = { path = "2022/day_12" }
day_2022_13 = { path = "2022/day_13" }
day_2022_14 = { path = "2022/day_14" }
day_2022_15 = { path = "2022/day_15" }
day_2022_16 = { path = "2022/day_16" }
day_2022_17 = { path = "2022/day_17" }
day_2022_18 = { path = "2022/day_18" }
day_2022_19 = { path = "2022/day_19" }
day_2022_20 = { path = "2022/day_20" }
day_2022_21 = { path = "2022/day_21" }
day_2022_22 = { path = "2022/day_22" }
day_2022_23 = { path = "2022/day_23" }
day_2022_24 = { path = "2022/day_24" }
day_2022_25 = { path = "2022/day_25" }

# 2021
# ===================================

# day_2021_01 = { path = "2021/day_01" }
# day_2021_02 = { path = "2021/day_02" }
# day_2021_03 = { path = "2021/day_03" }
# day_2021_04 = { path = "2021/day_04" }
# day_2021_05 = { path = "2021/day_05" }
# day_2021_06 = { path = "2021/day_06" }
# day_2021_07 = { path = "2021/day_07" }
# day_2021_08 = { path = "2021/day_08" }
# day_2021_09 = { path = "2021/day_09" }
# day_2021_10 = { path = "2021/day_10" }
# day_2021_11 = { path = "2021/day_11" }
# day_2021_12 = { path = "2021/day_12" }
# day_2021_13 = { path = "2021/day_13" }
# day_2021_14 = { path = "2021/day_14" }
# day_2021_15 = { path = "2021/day_15" }
# day_2021_16 = { path = "2021/day_16" }
# day_2021_17 = { path = "2021/day_17" }
# day_2021_18 = { path = "2021/day_18" }
# day_2021_19 = { path = "2021/day_19" }
# day_2021_20 = { path = "2021/day_20" }
# day_2021_21 = { path = "2021/day_21" }
# day_2021_22 = { path = "2021/day_22" }
# day_2021_23 = { path = "2021/day_23" }
# day_2021_24 = { path = "2021/day_24" }
# day_2021_25 = { path = "2021/day_25" }

# 2020
# ===================================

# day_2020_01 = { path = "2020/day_01" }
# day_2020_02 = { path = "2020/day_02" }
# day_2020_03 = { path = "2020/day_03" }
# day_2020_04 = { path = "2020/day_04" }
# day_2020_05 = { path = "2020/day_05" }
# day_2020_06 = { path = "2020/day_06" }
# day_2020_07 = { path = "2020/day_07" }
# day_2020_08 = { path = "2020/day_08" }
# day_2020_09 = { path = "2020/day_09" }
# day_2020_10 = { path = "2020/day_10" }
# day_2020_11 = { path = "2020/day_11" }
# day_2020_12 = { path = "2020/day_12" }
# day_2020_13 = { path = "2020/day_13" }
# day_2020_14 = { path = "2020/day_14" }
# day_2020_15 = { path = "2020/day_15" }
# day_2020_16 = { path = "2020/day_16" }
# day_2020_17 = { path = "2020/day_17" }
# day_2020_18 = { path = "2020/day_18" }
# day_2020_19 = { path = "2020/day_19" }
# day_2020_20 = { path = "2020/day_20" }
# day_2020_21 = { path = "2020/day_21" }
# day_2020_22 = { path = "2020/day_22" }
# day_2020_23 = { path = "2020/day_23" }
# day_2020_24 = { path = "2020/day_24" }
# day_2020_25 = { path = "2020/day_25" }

# 2019
# ===================================

# day_2019_01 = { path = "2019/day_01" }
# day_2019_02 = { path = "2019/day_02" }
# day_2019_03 = { path = "2019/day_03" }
# day_2019_04 = { path = "2019/day_04" }
# day_2019_05 = { path = "2019/day_05" }
# day_2019_06 = { path = "2019/day_06" }
# day_2019_07 = { path = "2019/day_07" }
# day_2019_08 = { path = "2019/day_08" }
# day_2019_09 = { path = "2019/day_09" }
# day_2019_10 = { path = "2019/day_10" }
# day_2019_11 = { path = "2019/day_11" }
# day_2019_12 = { path = "2019/day_12" }
# day_2019_13 = { path = "2019/day_13" }
# day_2019_14 = { path = "2019/day_14" }
# day_2019_15 = { path = "2019/day_15" }
# day_2019_16 = { path = "2019/day_16" }
# day_2019_17 = { path = "2019/day_17" }
# day_2019_18 = { path = "2019/day_18" }
# day_2019_19 = { path = "2019/day_19" }
# day_2019_20 = { path = "2019/day_20" }
# day_2019_21 = { path = "2019/day_21" }
# day_2019_22 = { path = "2019/day_22" }
# day_2019_23 = { path = "2019/day_23" }
# day_2019_24 = { path = "2019/day_24" }
# day_2019_25 = { path = "2019/day_25" }

# 2018
# ===================================

day_2018_01 = { path = "2018/day_01" }
day_2018_02 = { path = "2018/day_02" }
day_2018_03 = { path = "2018/day_03" }
day_2018_04 = { path = "2018/day_04" }
day_2018_05 = { path = "2018/day_05" }
# day_2018_06 = { path = "2018/day_06" }
# day_2018_07 = { path = "2018/day_07" }
# day_2018_08 = { path = "2018/day_08" }
# day_2018_09 = { path = "2018/day_09" }
# day_2018_10 = { path = "2018/day_10" }
# day_2018_11 = { path = "2018/day_11" }
# day_2018_12 = { path = "2018/day_12" }
# day_2018_13 = { path = "2018/day_13" }
# day_2018_14 = { path = "2018/day_14" }
# day_2018_15 = { path = "2018/day_15" }
# day_2018_16 = { path = "2018/day_16" }
# day_2018_17 = { path = "2018/day_17" }
# day_2018_18 = { path = "2018/day_18" }
# day_2018_19 = { path = "2018/day_19" }
# day_2018_20 = { path = "2018/day_20" }
# day_2018_21 = { path = "2018/day_21" }
# day_2018_22 = { path = "2018/day_22" }
# day_2018_23 = { path = "2018/day_23" }
# day_2018_24 = { path = "2018/day_24" }
# day_2018_25 = { path = "2018/day_25" }

# 2017
# ===================================

day_2017_01 = { path = "2017/day_01" }
day_2017_02 = { path = "2017/day_02" }
day_2017_03 = { path = "2017/day_03" }
day_2017_04 = { path = "2017/day_04" }
day_2017_05 = { path = "2017/day_05" }
day_2017_06 = { path = "2017/day_06" }
day_2017_07 = { path = "2017/day_07" }
day_2017_08 = { path = "2017/day_08" }
day_2017_09 = { path = "2017/day_09" }
day_2017_10 = { path = "2017/day_10" }
day_2017_11 = { path = "2017/day_11" }
day_2017_12 = { path = "2017/day_12" }
day_2017_13 = { path = "2017/day_13" }
day_2017_14 = { path = "2017/day_14" }
day_2017_15 = { path = "2017/day_15" }
day_2017_16 = { path = "2017/day_16" }
day_2017_17 = { path = "2017/day_17" }
day_2017_18 = { path = "2017/day_18" }
day_2017_19 = { path = "2017/day_19" }
day_2017_20 = { path = "2017/day_20" }
day_2017_21 = { path = "2017/day_21" }
day_2017_22 = { path = "2017/day_22" }
day_2017_23 = { path = "2017/day_23" }
day_2017_24 = { path = "2017/day_24" }
day_2017_25 = { path = "2017/day_25" }

# 2016
# ===================================

day_2016_01 = { path = "2016/day_01" }
day_2016_02 = { path = "2016/day_02" }
day_2016_03 = { path = "2016/day_03" }
day_2016_04 = { path = "2016/day_04" }
day_2016_05 = { path = "2016/day_05" }
day_2016_06 = { path = "2016/day_06" }
day_2016_07 = { path = "2016/day_07" }
day_2016_08 = { path = "2016/day_08" }
day_2016_09 = { path = "2016/day_09" }
day_2016_10 = { path = "2016/day_10" }
day_2016_11 = { path = "2016/day_11" }
day_2016_12 = { path = "2016/day_12" }
day_2016_13 = { path = "2016/day_13" }
day_2016_14 = { path = "2016/day_14" }
day_2016_15 = { path = "2016/day_15" }
day_2016_16 = { path = "2016/day_16" }
day_2016_17 = { path = "2016/day_17" }
day_2016_18 = { path = "2016/day_18" }
day_2016_19 = { path = "2016/day_19" }
day_2016_20 = { path = "2016/day_20" }
day_2016_21 = { path = "2016/day_21" }
day_2016_22 = { path = "2016/day_22" }
day_2016_23 = { path = "2016/day_23" }
day_2016_24 = { path = "2016/day_24" }
day_2016_25 = { path = "2016/day_25" }

# 2015
# ===================================

day_2015_01 = { path = "2015/day_01" }
day_2015_02 = { path = "2015/day_02" }
day_2015_03 = { path = "2015/day_03" }
day_2015_04 = { path = "2015/day_04" }
day_2015_05 = { path = "2015/day_05" }
day_2015_06 = { path = "2015/day_06" }
day_2015_07 = { path = "2015/day_07" }
day_2015_08 = { path = "2015/day_08" }
day_2015_09 = { path = "2015/day_09" }
day_2015_10 = { path = "2015/day_10" }
day_2015_11 = { path = "2015/day_11" }
day_2015_12 = { path = "2015/day_12" }
day_2015_13 = { path = "2015/day_13" }
day_2015_14 = { path = "2015/day_14" }
day_2015_15 = { path = "2015/day_15" }
day_2015_16 = { path = "2015/day_16" }
day_2015_17 = { path = "2015/day_17" }
day_2015_18 = { path = "2015/day_18" }
day_2015_19 = { path = "2015/day_19" }
day_2015_20 = { path = "2015/day_20" }
day_2015_21 = { path = "2015/day_21" }
day_2015_22 = { path = "2015/day_22" }
day_2015_23 = { path = "2015/day_23" }
day_2015_24 = { path = "2015/day_24" }
day_2015_25 = { path = "2015/day_25" }

[features]
